# hello-devops-ci

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: hello.cpp
src/: main.cpp
tests/: CMakeLists.txt  hello_test.cpp
